--- a/dist.ini
+++ b/dist.ini
@@ -44,11 +44,13 @@ repository.type = git
 [Test::UnusedVars]
 
 [Prereqs]
-perl          = 5.14
+perl          = 5.14.1
 Carp          = 0
 Scalar::Util  = 0
 
 bareword::filehandles     = 0
+
+true                      = 0
 
 Function::Parameters      = 0
 
