--- a/dist.ini
+++ b/dist.ini
@@ -61,6 +61,8 @@ List::Objects::Types      = 0
 
 Path::Tiny                = 0
 
+PerlX::Maybe              = 0.004
+
 Try::Tiny                 = 0
 
 Type::Tiny                = 0
