add define keyword

--- a/dist.ini
+++ b/dist.ini
@@ -68,6 +68,9 @@ Try::Tiny                 = 0
 Type::Tiny                = 0
 Types::Standard           = 0
 
+[Prereqs / RuntimeRecommends]
+PerlX::Maybe::XS          = 0.005
+
 [Prereqs / TestRequires]
 Test::More = 0.88
 
