drop Test::Synopsis

--- a/dist.ini
+++ b/dist.ini
@@ -40,13 +40,14 @@ repository.type = git
 [Test::DistManifest]
 [Test::Pod::LinkCheck]
 [Test::ReportPrereqs]
-[Test::Synopsis]
+;[Test::Synopsis]
 [Test::UnusedVars]
 
 [Prereqs]
 perl          = 5.14.1
 Carp          = 0
 Scalar::Util  = 0
+Keyword::Simple = 0
 
 bareword::filehandles     = 0
 
