--- a/dist.ini
+++ b/dist.ini
@@ -50,6 +50,7 @@ Scalar::Util  = 0
 Keyword::Simple = 0
 
 bareword::filehandles     = 0
+indirect                  = 0.30
 
 true                      = 0
 
