--- a/dist.ini
+++ b/dist.ini
@@ -52,23 +52,25 @@ Keyword::Simple = 0
 bareword::filehandles     = 0
 indirect                  = 0.30
 
-true                      = 0
+true                      = 0.18
 
-Function::Parameters      = 0
+Function::Parameters      = 1.0201
 
 Import::Into              = 0
 
 List::Objects::WithUtils  = 1.009
 List::Objects::Types      = 0
 
-Path::Tiny                = 0
+Path::Tiny                = 0.03
 
 PerlX::Maybe              = 0.004
 
 Try::Tiny                 = 0
 
-Type::Tiny                = 0
+Type::Tiny                = 0.022
 Types::Standard           = 0
+
+Types::Path::Tiny         = 0.005
 
 [Prereqs / RuntimeRecommends]
 PerlX::Maybe::XS          = 0.005
