--- a/dist.ini
+++ b/dist.ini
@@ -52,6 +52,8 @@ Keyword::Simple = 0
 bareword::filehandles     = 0
 indirect                  = 0.30
 
+match::simple             = 0.004
+
 true                      = 0.18
 
 Function::Parameters      = 1.0201
