Moo import tag, test for same

--- a/dist.ini
+++ b/dist.ini
@@ -63,9 +63,12 @@ Import::Into              = 1
 List::Objects::WithUtils  = 1.009
 List::Objects::Types      = 0
 
+Moo                       = 1
+MooX::late                = 1
+
 Path::Tiny                = 0.03
 
-PerlX::Maybe              = 0.004
+PerlX::Maybe              = 1
 
 Try::Tiny                 = 0
 
@@ -74,7 +77,7 @@ Type::Tiny                = 0.022
 Types::Path::Tiny         = 0.005
 
 [Prereqs / RuntimeRecommends]
-PerlX::Maybe::XS          = 0.005
+PerlX::Maybe::XS          = 1
 
 [Prereqs / TestRequires]
 Test::More = 0.88
