--- a/dist.ini
+++ b/dist.ini
@@ -70,6 +70,8 @@ Path::Tiny                = 0.03
 
 PerlX::Maybe              = 1
 
+Switch::Plain             = 0
+
 Try::Tiny                 = 0
 
 Type::Tiny                = 0.022
