Add LoadableClass, use state var for typelib list
(also some POD fixes)

--- a/dist.ini
+++ b/dist.ini
@@ -76,6 +76,7 @@ Try::Tiny                 = 0
 
 Type::Tiny                = 0.022
 
+Types::LoadableClass      = 0.002
 Types::Path::Tiny         = 0.005
 
 [Prereqs / RuntimeRecommends]
