Support for automatically registering other type libs
	modified:   dist.ini
	modified:   lib/Defaults/Modern.pm
	modified:   t/modern.t

--- a/dist.ini
+++ b/dist.ini
@@ -63,6 +63,7 @@ Import::Into              = 1
 List::Objects::WithUtils  = 2
 List::Objects::Types      = 0.006
 
+Module::Runtime           = 0
 Moo                       = 1
 MooX::late                = 0.014
 
