depend on T::T 0.040, recommend match::simple::XS
	modified:   dist.ini

--- a/dist.ini
+++ b/dist.ini
@@ -77,13 +77,14 @@ Switch::Plain             = 0
 
 Try::Tiny                 = 0
 
-Type::Tiny                = 0.022
+Type::Tiny                = 0.04
 
 Types::LoadableClass      = 0.002
 Types::Path::Tiny         = 0.005
 
 [Prereqs / RuntimeRecommends]
 PerlX::Maybe::XS          = 1
+match::simple::XS         = 0
 
 [Prereqs / TestRequires]
 Test::More = 0.88
