dist.ini; Test::NoTabs
	modified:   dist.ini

--- a/dist.ini
+++ b/dist.ini
@@ -33,11 +33,11 @@ repository.type = git
 [ReadmeFromPod]
 [ReadmeMarkdownFromPod]
 
-[NoTabsTests]
 [PodCoverageTests]
 [PodSyntaxTests]
 [Test::CPAN::Changes]
 [Test::DistManifest]
+[Test::NoTabs]
 [Test::Pod::LinkCheck]
 [Test::ReportPrereqs]
 ;[Test::Synopsis]
