import strictures-2 for saner warnings behavior
Previously the caller would get essentially strictures-1 behavior (except with
'no indirect' and 'no bareword::filehandles' always on); strictures-2 has
saner fatal warnings.

--- a/dist.ini
+++ b/dist.ini
@@ -49,6 +49,7 @@ Carp          = 0
 Scalar::Util  = 0
 Keyword::Simple = 0
 
+strictures                = 2
 bareword::filehandles     = 0
 indirect                  = 0.30
 
