use MooX::TypeTiny with Moo tag

--- a/dist.ini
+++ b/dist.ini
@@ -69,6 +69,7 @@ List::Objects::Types      = 1.002
 Module::Runtime           = 0
 Moo                       = 1
 MooX::late                = 0.014
+MooX::TypeTiny            = 0
 
 Path::Tiny                = 0.05
 
