--- a/dist.ini
+++ b/dist.ini
@@ -43,6 +43,11 @@ repository.type = git
 ;[Test::Synopsis]
 [Test::UnusedVars]
 
+[PromptIfStale]
+phase = build
+check_all_plugins = 1
+check_all_prereqs = 1
+
 [Prereqs]
 perl          = 5.14.1
 Carp          = 0
