--- a/dist.ini
+++ b/dist.ini
@@ -2,20 +2,25 @@ name    = Defaults-Modern
 author  = Jon Portnoy <avenj@cobaltirc.org>
 license = Perl_5
 copyright_holder = Jon Portnoy
-copyright_year   = 2013
+copyright_year   = 2016
 
-version = 0.009001
+version = 0.009002
 
-[@Basic]
+[@Filter]
+-bundle = @Basic
+-remove = Readme
+
 [MetaJSON]
 
 [@Git]
 allow_dirty  = Changes
 allow_dirty  = dist.ini
 allow_dirty  = README.mkdn
+allow_dirty  = cpanfile
 add_files_in = Changes
 add_files_in = dist.ini
 add_files_in = README.mkdn
+add_files_in = cpanfile
 tag_format   = '%v'
 tag_message  = 'dist %v'
 untracked_files = warn
@@ -30,8 +35,10 @@ repository.type = git
 
 [PkgVersion]
 
-[ReadmeFromPod]
-[ReadmeMarkdownFromPod]
+[ReadmeAnyFromPod]
+type = markdown
+filename = README.mkdn
+location = build
 
 [PodCoverageTests]
 [PodSyntaxTests]
@@ -41,58 +48,14 @@ repository.type = git
 [Test::Pod::LinkCheck]
 [Test::ReportPrereqs]
 ;[Test::Synopsis]
-[Test::UnusedVars]
+;[Test::UnusedVars]
 
 [PromptIfStale]
-phase = build
+phase = release
 check_all_plugins = 1
 check_all_prereqs = 1
 
-[Prereqs]
-perl          = 5.14.1
-Carp          = 0
-Scalar::Util  = 0
-Keyword::Simple = 0
-
-strictures                = 2
-bareword::filehandles     = 0
-indirect                  = 0.30
-
-match::simple             = 0.004
-
-true                      = 0.18
-
-Exporter::Tiny            = 0.04
-
-Function::Parameters      = 1.0601
-
-Import::Into              = 1
-
-List::Objects::WithUtils  = 2.008
-List::Objects::Types      = 1.002
-
-Module::Runtime           = 0
-Moo                       = 1
-
-Path::Tiny                = 0.05
-
-PerlX::Maybe              = 1
-
-Switch::Plain             = 0
-
-Try::Tiny                 = 0
-
-Type::Tiny                = 1
-
-Types::LoadableClass      = 0.002
-Types::Path::Tiny         = 0.005
-
-[Prereqs / RuntimeRecommends]
-PerlX::Maybe::XS          = 1
-match::simple::XS         = 0
-
-[Prereqs / TestRequires]
-Test::More = 0.88
+[Prereqs::FromCPANfile]
 
 [Run::AfterBuild]
 run = cp %d%pREADME.mkdn .
