--- a/dist.ini
+++ b/dist.ini
@@ -12,6 +12,10 @@ version = 0.011001
 
 [MetaJSON]
 
+[MetaNoIndex]
+directory = examples
+directory = t/inc
+
 [@Git]
 allow_dirty  = Changes
 allow_dirty  = dist.ini
